# Variational-Monte-Carlo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  config.cfg  render.py  requirements.txt
.github/workflows/: ci.yml  cmake-single-platform.yml
data/: run.jsonl  sample.json
docs/: frame-schema.md
scripts/: build-fast.sh  build.ps1  build.sh  lint_args.py  profile.ps1  profile.sh  test.ps1  test.sh
src/: main.cpp
src/blocking_analysis/: blocking_analysis.cpp  blocking_analysis.hpp
src/config/: config.hpp
src/energy/: local_energy.cpp  local_energy.hpp
src/energy_tracking/: energy_tracking.cpp  energy_tracking.hpp
src/jastrow_pade/: jastrow_pade.cpp  jastrow_pade.hpp
src/memory/: memory.hpp
src/optimizer/: jastrow_optimizer.cpp  jastrow_optimizer.hpp
src/output_writer/: output_writer.cpp  output_writer.hpp
src/particles/: particles.hpp
src/pbc/: pbc.cpp  pbc.hpp
src/simulation/: simulation.cpp  simulation.hpp
src/slater_plane_wave/: slater_plane_wave.cpp  slater_plane_wave.hpp  slater_plane_wave_shells.hpp
src/utilities/: aligned_soa.hpp  fast_trig.hpp  macros.hpp  matrix.hpp  memory.hpp
src/wavefunction/: jastrow_pade.cpp  jastrow_pade.hpp  slater_plane_wave.cpp  slater_plane_wave.hpp  wavefunction.cpp  wavefunction.hpp
tests/: test_aligned_soa.cpp  test_blocking_analysis.cpp  test_config.cpp  test_energy_tracking.cpp  test_jastrow_pade.cpp  test_known_energy.cpp  test_optimizer.cpp  test_output_writer.cpp  test_particles.cpp  test_pbc.cpp  test_rigorous_physics.cpp  test_simulation.cpp  test_simulation_rejection_invariance.cpp  test_slater_plane_wave.cpp  test_tests.cpp  test_utilities.hpp  test_validation_free_gas.cpp  test_validation_interacting.cpp  test_wavefunction.cpp
tools/: check.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/public/: sample-run.jsonl
web/src/: App.tsx  index.css
web/src/components/: EnergyChart.tsx  ErrorState.tsx  LoadingState.tsx  PlaybackControls.tsx  Sidebar.tsx  StatsPanel.tsx
web/src/hooks/: usePlayback.ts
web/src/lib/: format.ts  loadFrames.ts
web/src/scene/: BoxWireframe.tsx  ParticlesInstanced.tsx  SimulationCanvas.tsx
web/src/theme/: palette.ts
web/src/types/: simulation.ts
